2006-11-10  Albert Chu  <chu11@llnl.gov>

	* src/libs/cerebro/cerebro_metric_util.c
	(_cerebro_metric_get_data): Fix config parse bug.

2006-11-09  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c, man/cerebro-stat.8.in: Adjust
	wording so "metric server" refers to a "metric server" or "event
	server".

	* src/cerebrod/cerebrod_event_server.h,
	src/cerebrod/cerebrod_event.c, src/libs/include/cerebro.h,
	src/libs/include/cerebro/cerebro_event_protocol.h,
	src/libs/cerebro/cerebro_event.c, src/cerebro-stat/cerebro-stat.c:
	Support 'event_names' retrieval.  Includes modification to
	metriclist structures to be used generically for metric names or
	event names.

	* man/cerebro_get_event_names.3,
	src/libs/cerebro/cerebro_event_names.c: New files.
	
	* src/cerebrod/cerebrod_metric_server.c: Various code cleanup.

	* man/: Adjust manpages appropriately for new functions and
	changes.

	* man/: Various minor cleanup.

	* src/cerebrod/: Fix bug fixes and code cleanup.
	
2006-11-08  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/Makefile.am: Add cerebro_event_protocol.h.
	
2006-11-07  Albert Chu  <chu11@llnl.gov>

	Add Cerebro Event Monitoring Support (from branch
	'cerebro_event_branch', tag 'cerebro_event_final')

	* src/libs/include/cerebro_event_protocol.h,
	src/libs/include/cerebro_event_module.h,
	src/libs/modules/event_module.h, src/libs/modules/event_module.c,
	src/libs/cerebro/cerebro_event.c: New files.

	* src/libs/include/cerebro.h: Add event API functions.

	* src/libs/cerebro_api.h: Add event API support into struct cerebro.

	* src/libs/cerebro.c (cerebro_handle_create): Add event API support.

	* src/libs/include/Makefile.am, src/libs/modules/Makefile.am,
	src/cerebrod/Makefile.am: Adjust appropriately.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c,
	src/libs/util/config_util.c,
	src/libs/include/cerebro/cerebro_config.h: Support event server
	config variables.

	* src/cerebrod/cerebrod_event_server.h,