@@ -1,5 +1,12 @@
 2006-11-10  Albert Chu  <chu11@llnl.gov>
 
+	* src/cerebrod/, src/libs, src/cerbro-admin/,
+	man/cerebro-admin.8.in: Support new 'send-now' functionality for
+	updated metrics.  Adjust code appropriately to support new feature
+	and make code cleaner.
+
+2006-11-10  Albert Chu  <chu11@llnl.gov>
+
 	* src/libs/cerebro/cerebro_metric_util.c
 	(_cerebro_metric_get_data): Fix config parse bug.
 
